<resources>
    <string name="app_name">MovieBaseApp</string>
    <string name="app_icon">App icon</string>
    <string name="movie_base_app">Movie base app</string>
    <string name="poster">Poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="imdb">IMDb:</string>
    <string name="example_rating">8.0</string>
    <string name="year">Year:</string>
    <string name="example_year">2021</string>
    <string name="actors">Actors:</string>
    <string name="example_actors">Timothée Chalamet, Rebecca Ferguson, Zendaya</string>
    <string name="country">Country:</string>
    <string name="example_country">Canada, United States</string>
    <string name="plot">Plot:</string>
    <string name="example_plot">A noble family becomes embroiled in a war for control over the galaxy\'s most valuable asset while its heir becomes troubled by visions of a dark future</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">favorite</string>
</resources>