<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:contentDescription="@string/poster"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_example_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <GridLayout
        android:id="@+id/grid_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/imdbRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imdb" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_imdbRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_rating" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:text="@string/year" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_year" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actors" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_actors" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_country" />

    </GridLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_plot"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid_container" />


</androidx.constraintlayout.widget.ConstraintLayout>